fixed z-index codes

--- a/src/css/common/_header-lower.scss
+++ b/src/css/common/_header-lower.scss
@@ -4,16 +4,13 @@
 @use 'tools/mixin' as mixin;
 
 .header-lower {
-  @include mixin.center;
-  position: fixed;
-  z-index: 3;
   height: 94px;
   width: 100%;
   font-family: font-family.$yugo;
 
   &::before { //left triangle
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 0;
@@ -23,15 +20,15 @@
     border-color: color.$primary-lower transparent transparent transparent;
     z-index: 4;
   }
-
-  &::after {
+  
+  &::after { //white background
     content: '';
-    position: absolute;
-    background-color: color.$white;
     position: fixed;
-    z-index: 3;
+    background-color: color.$white;
     height: 94px;
     width: 100%;
+    top: 0;
+    z-index: 3;
   }
 }
 
@@ -39,11 +36,11 @@
   @include mixin.center;
   flex-direction: column;
   align-items: flex-start;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   padding: 15px 30px;
-  z-index: 5;
+  z-index: 4;
 
   &-top-text {
     font-size: 15px;
@@ -60,8 +57,7 @@
 
 .header-lower__right {
   @include mixin.center;
-  flex: 1;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   z-index: 4;
@@ -70,10 +66,9 @@
 
 .header-lower__nav {
   @include mixin.center;
- justify-content: flex-end;
+  justify-content: flex-end;
   gap: 25px;
   padding-right: 35px;
-  flex: 1;
 
   &-item {
     color: color.$primary-lower;
