--- a/src/css/common/_lower-banner.scss
+++ b/src/css/common/_lower-banner.scss
@@ -5,10 +5,9 @@
 
 .banner {
   width: 100%;
-  height: 240px;
+  height: 150px;
   overflow: hidden;
   @include mixin.center;
-  padding-top: 80px;
 
   &::before { //white image filter
     content: '';
@@ -30,6 +29,7 @@
     border-style: solid;
     border-width: 0 0 220px 460px;
     border-color: transparent transparent color.$blue-green transparent;
+    z-index: 3;
   }
 
   &__image {
